astro/src/styles/link-focus-hover.scss
/*******************************************/
/* Keyboard focus and hover customizations */
/*******************************************/

// We use the following design philosophy on the website
//    - Outline box for keyboard focus, removing underline.
//    - Invert background/foreground for hover.



// TODO: Original Code that needs to be cleaned up.

.form-field:focus {
  border-color: $info-border-contrast;
  border-style: solid;
  outline-offset: 2px;
}

.form-field:focus, .form-control:focus-visible, .form-select:focus-visible {
  border-radius: 0.375rem;
}

.form-check-input:focus, .form-check-input:focus-visible, .form-control:focus-visible, .form-select:focus-visible {
  outline: 2px solid $primary;
  outline-offset: 2px;
  box-shadow: none;
}

.icon-link {
  text-underline-offset: 0.1em;
  text-decoration-color: currentColor;
}

@include color-mode(dark) {
  *:focus-visible, .form-field:focus, .form-check-input:focus, .form-check-input:focus-visible, .navbar-toggler:focus, .btn:focus-visible, .nav-link:focus-visible, .form-control:focus-visible, .form-select:focus-visible {
    outline-color: #FFFFFF;
  }

  .form-field:focus {
    border-color: $info-border-contrast-dark;
  }

  .form-control,.form-control:focus, .form-check-input, .form-check-input:focus, .form-select, form-select:focus {
    border-color: $info-border-contrast-dark;
  }

  .form-check-input:checked {
    border-color: $info-border-contrast-dark;
  }
}


// New focus/hover code utilizing bootstrap CSS variables to be generic

a {
  --ac-link-hover-bg: var(--bs-link-color);
  --ac-link-focus-outline-color: var(--bs-link-color);

  &:focus-visible {
    box-shadow: none;
    outline: 2px solid var(--ac-link-focus-outline-color);
    outline-offset: 2px;
    text-decoration: none;
  }
  &:hover {
    color: RGBA(var(--bs-link-hover-color-rgb), var(--bs-link-opacity, 1));
    background-color: var(--ac-link-hover-bg);
    transition: all 0.1s ease-in;
  }

  @each $color, $value in $theme-colors {
    &.link-#{$color} {
      --bs-link-color: #{$value};
      --ac-link-focus-outline-color: #{$value};
      --ac-link-hover-bg: #{$value};
      @if $color == light {
        --bs-link-hover-color-rgb: var(--bs-primary-rgb);
      } @else {
        --bs-link-hover-color-rgb: var(--bs-white-rgb);
      }

      &:hover {
        color: RGBA(var(--bs-link-hover-color-rgb), var(--bs-link-opacity, 1)) !important;
      }
    }
  }
}
@include color-mode(dark) {
  a {
    --bs-link-hover-color-rgb: var(--bs-primary-rgb);
    --ac-link-hover-bg: #ffffff;
  }
}


.btn {
  --ac-link-focus-outline-color: var(--bs-btn-bg);

  &:focus-visible {
    border-radius: 0.375rem;
    box-shadow: none;
    outline: 2px solid var(--ac-link-focus-outline-color);
    outline-offset: 2px;

    &:not(:hover) {
      @include gradient-bg(var(--bs-btn-bg));
    }
  }

  @each $color, $value in $theme-colors {
    &.btn-#{$color}, &.border-#{$color} {
      --ac-link-focus-outline-color: #{$value};
    }
  }
}
@include color-mode(dark) {
  // Global mode to switch buttons to a nice contrast in dark mode
  .btn.btn-contrast-dark {
    --bs-btn-color: var(--bs-primary);
    --bs-btn-bg: #FFFFFF;

    &:focus-visible:not(:hover) {
      color: var(--bs-btn-color);
    }
  }
}


.navbar-nav {
  .nav-link {
    --ac-link-hover-bg: var(--bs-nav-link-color);
    --ac-link-focus-outline-color: var(--bs-nav-link-color);

    &:focus-visible {
      color: var(--bs-nav-link-color); // Override hover color on focus
      outline: 2px solid var(--ac-link-focus-outline-color);
    }
    &:focus {
      color: var(--bs-nav-link-color);
    }
    &:hover {
      color: var(--bs-navbar-hover-color); // Override focus color on hover
    }

    &.active {
      --ac-link-hover-bg: var(--bs-navbar-active-color);
      --ac-link-focus-outline-color: var(--bs-navbar-active-color);

      &:focus-visible {
        color: var(--bs-navbar-active-color); // Override hover color on focus
      }
      &:hover {
        color: var(--bs-navbar-hover-color); // Override focus color on hover
      }
    }
  }
}

.navbar-brand {
  --bs-link-color: var(--bs-navbar-brand-color);
  --ac-link-hover-bg: var(--bs-navbar-brand-color);

  &:focus {
    color: var(--bs-navbar-brand-color); // Override hover color on focus
  }
  &:hover {
    color: var(--bs-navbar-brand-hover-color); // Override focus color on hover
  }
}
.navbar-toggler:focus {
  border-radius: 0.375rem !important;
}


.dropdown-item {
  --bs-link-color: var(--bs-dropdown-link-color);

  &:focus-visible {
    background-color: var(--bs-dropdown-bg);
    color: var(--bs-dropdown-link-color); // Override hover color on focus
    --ac-link-focus-outline-color: var(--bs-dropdown-link-color);
  }
  &:hover {
    color: var(--#{$prefix}dropdown-link-hover-color); // Override focus color on hover
    @include gradient-bg(var(--bs-dropdown-link-hover-bg)); // Override focus bg on hover
  }
}

